[SELC-4869] feat: Removed unused API's from InstitutionController (#236)